namespace Builder.Food
{
  public class Car: Toy
  {

  }
}