namespace Builder.Food
{
  public abstract class Toy
  {

  }
}