namespace Builder.Food
{
    public class Coke
    {
        
    }
}