namespace Builder.Food.FriedFoodModule
{
  public class Chicken : MainFriedFood
  {

  }
}