namespace Builder.Food.FriedFoodModule
{
  public class FrenchFriesPack
  {

  }
}