namespace Builder.Food.FriedFoodModule
{
  public class Hamburger : MainFriedFood
  {

  }
}