namespace Builder.Food.FriedFoodModule
{
  public abstract class MainFriedFood
  {

  }
}